<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="sKraftVariablen" Id="{9d73e370-925f-4af6-92de-4cb882701872}">
    <Declaration><![CDATA[TYPE sKraftVariablen :
STRUCT
	Fx					:LREAL;							// Kraft in X-Richtung 
	Fy					:LREAL;							// Kraft in Y-Richtung 
	Fz					:LREAL;							// Kraft in Z-Richtung 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>